--- a/app/website/public/index.html
+++ b/app/website/public/index.html
@@ -8,7 +8,7 @@
     <title>Tiny Alert</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/logo-alert4sud.svg">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/html5-boilerplate.css">
@@ -76,7 +76,6 @@
         </section>
     </main>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
     </script>
