--- a/app/website/public/index.html
+++ b/app/website/public/index.html
@@ -2,13 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Tiny Alert</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/logo-alert4sud.svg">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/html5-boilerplate.css">
@@ -83,14 +82,8 @@
 
     </main>
 
-    <img src="C:\Users\basti\Documents\Epitech working\void\app\website\public\front\images\roblox.png" alt="Fixed Image" class="fixed-image">
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    </script>
+    <!--<img src="images\roblox.png" alt="Fixed Image" class="fixed-image">-->
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/header.js"></script>
 </body>
 
