--- a/app/website/public/index.html
+++ b/app/website/public/index.html
@@ -7,6 +7,10 @@
     <title>Tiny Alert</title>
     <meta name="description" content="">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" href="images/logo-alert4sud.svg">
 
     <link rel="stylesheet" href="css/normalize.css">
@@ -75,7 +79,7 @@
             </div>
         </div>        
         <div class="right-section">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo d'exemple" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img src="images/roblox.jpg" title="Vidéo d'exemple" height="400px">
         </div>
         </section>
     </section>
@@ -85,6 +89,10 @@
     <!--<img src="images\roblox.png" alt="Fixed Image" class="fixed-image">-->
     <script src="js/plugins.js"></script>
     <script src="js/header.js"></script>
+
+    <div id="lead">
+        <img src="images/image.webp" alt="">
+    </div>
 </body>
 
 <footer>
