--- a/app/website/public/index.html
+++ b/app/website/public/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>        
         <div class="right-section">
-            <img src="images/roblox.jpg" title="Vidéo d'exemple" height="400px">
+            <img src="images/roblox.png" title="Vidéo d'exemple" height="400px">
         </div>
         </section>
     </section>
