lien pour jouer

--- a/app/website/public/index.html
+++ b/app/website/public/index.html
@@ -75,7 +75,10 @@
             <div class="left-section">
             <p>Rejoignez une expérience unique et immersive. Tiny Alert est un jeu sur les risques majeurs. Trouvez un moyen de s'en sortir en cas de danger ! Faites de votre mieux pour atteindre le top du classement !</p>
                 <div class="buttons">                    <button class="secondary">Leaderboard</button>
-                <button>Jouer</button>
+                <a 
+                    href="https://www.roblox.com/games/83842793315564/Hackathon-2024">
+                    <button>Jouer</button>
+                </a>
             </div>
         </div>        
         <div class="right-section">
